<resources>

    /* App, default, login */
    <string name="app_name">Tonight</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register_school">RegisterSchoolActivity</string>

    /* Icon Names */
    <string name="map_icon">Map</string>
    <string name="list_icon">List</string>
    <string name="add_event_icon">Add</string>

    /* School Names */
    <string name="rutgers_button">Rutgers University - New Brunswick</string>
    <string name="ut_button">University of Texas - Austin</string>
    <string name="wvu_button">West Virginia University</string>
    <string name="tulane_button">Tulane University</string>
    <string name="azstate_button">Arizona State University</string>
    <string name="az_button">University of Arizona</string>
    <string name="east_carolina_button">East Carolina University</string>
    <string name="umass_button">University of Massachusetts</string>
    <string name="penn_state_button">Penn State University</string>
    <string name="florida_state_button">Florida State University</string>

    <string name="submit_button">Submit</string>

    // Search bar
    <string name="search_bar_text">frat, bar, special event, etc.</string>\
    <string name="add_event">add event</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_registration_details">RegistrationDetailsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
